# nike-campaign-captures

./: .gitignore  app.py  files.py  llm.py  logger.py  main.py  pyproject.toml  serper.py  utils.py
markdowns/: snap-0d60338ac88d436cb7eb54e5c44195a8.md  snap-409659f9b17d4736bf84dfe8548dbcb2.md  snap-b849d5e9af0a4f7a95afe862fc84822b.md
